<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.moviequiz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/allQuestionsView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="1."
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/q1TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/question1"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioGrp1Btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Titanic"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp1Btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Gone With The Wind"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp1Btn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="One Flew Over Cuckoo's Nest"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp1Btn4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Rocky"
                    android:textSize="16sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="2."
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/q2TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/question2"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioGrp2Btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Katherine Hepburn"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp2Btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Meryl Streep"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp2Btn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Audrey Hepburn"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp2Btn4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Bette Davis"
                    android:textSize="16sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="3."
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/q3TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/question3"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioGrp3Btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Marlon Brando"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp3Btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daniel Day Lewis"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp3Btn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Jack Nicholson"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp3Btn4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Al Pacino"
                    android:textSize="16sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="4."
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/q4TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/question4"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioGrp4Btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Katherine Hepburn"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp4Btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Meryl Streep"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp4Btn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Audrey Hepburn"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp4Btn4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Judi Dench"
                    android:textSize="16sp" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="5."
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/q5TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/question5"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/radioGrp5Btn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="John Ford"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp5Btn2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Billy Wilder"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp5Btn3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="William Wyler"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioGrp5Btn4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="James Cameron"
                    android:textSize="16sp" />
            </RadioGroup>

        </LinearLayout>
        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/allQuestionsView"
            android:layout_centerHorizontal="true"
            android:text="@string/btnText"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:onClick="showResults"/>
    </RelativeLayout>
</ScrollView>